# apis/src/interfaces/http/handlers/auth/register.rs
@@ -1,3 +1,5 @@
+// use std::sync::Arc;
+
 use crate::pkg::validators::ValidatedJson;
 use axum::{Json, extract::Extension, http::StatusCode};
 
@@ -13,14 +15,18 @@ use crate::types::user_types::{RegisterRequest, RegisterResponse};
     post,
     path = "/api/auth/register",
     request_body = RegisterRequest,
-    responses((status = 200, description = "Registered", body = RegisterResponse)),
+    responses(
+        (status = 200, description = "User successfully registered", body = RegisterResponse),
+        (status = 400, description = "Validation error or bad request", body = ApiErrorResponse),
+        (status = 409, description = "Email or username already exists", body = ApiErrorResponse)
+    ),
     tag = "Auth"
 )]
 pub async fn register(
-    Extension(ctx): Extension<std::sync::Arc<AppContext>>,
+    Extension(ctx): Extension<AppContext>,
     ValidatedJson(input_data): ValidatedJson<RegisterRequest>,
 ) -> AppResult<(StatusCode, Json<Response<RegisterResponse>>)> {
-    let output = auth_service::register(&ctx, ctx.repos.users.as_ref(), input_data).await?;
+    let output = auth_service::register(&ctx, input_data).await?;
     let body = Response::with_data("Registered", output, StatusCode::OK.as_u16());
     Ok((StatusCode::OK, Json(body)))
 }
