# apis/src/interfaces/http/handlers/lessons/mod.rs
@@ -1,21 +1,17 @@
-pub mod list_lessons;
-pub mod create_lesson;
-pub mod update_lesson;
-pub mod delete_lesson;
-pub mod upload_lesson_video;
-pub mod contents;
-pub mod questions;
 pub mod assignment;
 pub mod bulk_update_positions;
+pub mod contents;
+pub mod create_lesson;
+pub mod delete_lesson;
+pub mod list_lessons;
+pub mod questions;
+pub mod update_lesson;
 
-pub use list_lessons::list_lessons;
-pub use create_lesson::create_lesson;
-pub use update_lesson::update_lesson;
-pub use delete_lesson::delete_lesson;
-pub use upload_lesson_video::upload_lesson_video;
-pub use contents::*;
-pub use questions::*;
 pub use assignment::*;
 pub use bulk_update_positions::bulk_update_lesson_positions;
-
-
+pub use contents::*;
+pub use create_lesson::create_lesson;
+pub use delete_lesson::delete_lesson;
+pub use list_lessons::list_lessons;
+pub use questions::*;
+pub use update_lesson::update_lesson;
